tests/testFiles/semanticErrors/assignfunctiontoexistingvar.meme
ermahgerd a = 10;

you: a()
me, an intellectual: {
}
